--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "clean-node-api",
   "version": "3.0.0",
-  "description": "NodeJs Rest API and GraphQL using TDD, Clean Architecture, Typescript and Design Patterns",
+  "description": "Teste de Commit",
   "author": "Rodrigo Manguinho",
   "license": "GPL-3.0-or-later",
   "repository": "github:rmanguinho/clean-ts-api",
